Removed static imports and redundant throws